Make some sighting form labels shorter and consistent with others. (#439)

--- a/gobotany/plantshare/templates/_sighting_form.html
+++ b/gobotany/plantshare/templates/_sighting_form.html
@@ -31,7 +31,7 @@
             {{ form.longitude.as_hidden }}
         </fieldset>
 
-        <p>Add images to sighting</p> 
+        <p>Images</p> 
         <p><a id="upload-link" href="#" rel=".image-modal">+ Upload Image</a></p>
         <div id="sighting-photos">
             <input type="hidden" name="__template__sightings_photos" class="template-photo"></input>
@@ -54,7 +54,7 @@
         </div>
 
         <div class="visibility">
-            <p>Who can see this sighting?</p>
+            <p>Visibility</p>
             <p>{{ form.visibility }}</p>
         </div>
 
