Edit some labels and messages. (#439)

--- a/gobotany/plantshare/templates/_image_upload_form.html
+++ b/gobotany/plantshare/templates/_image_upload_form.html
@@ -6,7 +6,7 @@
         action="{% url 'ps-ajax-image-upload' %}">
         {% csrf_token %}
         <div class="screening-notify">
-            <p>All images are screened by Plantshare Staff before being displayed publicly.</p>
+            <p>All images are screened by PlantShare Staff before being displayed publicly.</p>
         </div>
         <div style="display: none;">
             {{ image_form.image }}
