--- a/gobotany/plantshare/templates/staff/screen_images.html
+++ b/gobotany/plantshare/templates/staff/screen_images.html
@@ -9,8 +9,8 @@
 
 <div class="box">
     <h2>Image Screening</h2>
-    <p>Images uploaded by Plantshare users must be screened before they will
-    appear publically or be shared with other users.  Please select images
+    <p>Images uploaded by PlantShare users must be screened before they will
+    appear publicly or be shared with other users.  Please select images
     which do not contain inappropriate or copyrighted material, and check
     "Approve" to approve the images for public display. Images left unchecked
     will be rejected as inappropriate.</p>
