--- a/gobotany/plantshare/templates/edit_checklist.html
+++ b/gobotany/plantshare/templates/edit_checklist.html
@@ -1,7 +1,7 @@
 {% extends "gobotany/_page_free_sidebar.html" %}
 {% load mapping_tags %}
 
-{% block title %}Checklists: Plantshare{% endblock %}
+{% block title %}Checklists: PlantShare{% endblock %}
 
 {% block js_require %}
     require([
