Improve the introductory list on the Checklists page.

--- a/gobotany/plantshare/templates/checklists.html
+++ b/gobotany/plantshare/templates/checklists.html
@@ -18,9 +18,9 @@
 <div class="notification box">
     <p>Check out our checklists!<p>
     <ul>
-        <li>Create your own list of plants you have seen.</li>
+        <li>Create your own checklist of plants you have seen.</li>
         <li>Share checklists with friends, students, and colleagues.</li>
-        <li>To start a new list, click the "Create new list" button.</li>
+        <li>When planning a trip, find checklists made by local experts.</li>
     </li>
     <a class="ps-button" href="{% url 'ps-checklist-new' %}">Create New Checklist</a>
 </div>
