--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -1019,6 +1019,9 @@ body.plantshare {
 }
 
 &#checklists {
+    .notification.box li {
+        list-style-type: disc;
+    }
     div.notes-modal {
         background-color: #fff;
         overflow: hidden; 
