--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -1291,7 +1291,7 @@ body.plantshare#checklists div.notes-modal section { padding: 10px 0 0; }
 body.plantshare#checklists div.notes-modal textarea { border: 1px solid #ABABAB; box-shadow: inset 1px 1px 5px #ccc; -moz-box-shadow: inset 1px 1px 5px #ccc; -webkit-box-shadow: inset 1px 1px 5px #ccc; font-size: inherit; height: 80px; line-height: inherit; max-width: 90%; padding: 7px 5px 5px; width: 100%; }
 body.plantshare#checklists div.notes-modal div.form-actions { padding: 10px 0; }
 body.plantshare#checklists div.notes-modal div.form-actions a.clear-btn { margin: 0 0 0 10px; }
-body.plantshare#checklists div.ps-section { margin: 20px 0; padding: 10px 0; }
+body.plantshare#checklists div.ps-section { margin: 0; padding: 0; }
 body.plantshare#checklists .image-modal { background-color: white; border: 5px solid #ACAC90; display: none; padding: 15px; position: absolute; width: 400px; height: 160px; z-index: 10; }
 body.plantshare#checklists .image-modal img { float: left; margin: 0 20px 10px 0; max-height: 84px; max-width: 84px; }
 body.plantshare#checklists .image-modal a.button { display: inline-block; color: white; margin: 10px 0; }
@@ -1324,7 +1324,7 @@ body.plantshare#checklists table.checklists-list .note a { margin: 0; }
 body.plantshare#checklists table.checklists-list .note a.row-btn { float: right; margin: 0 0 0 8px; text-indent: -9999px; }
 body.plantshare#checklists table.checklists-list thead { display: block; width: auto; }
 body.plantshare#checklists table.checklists-list thead tr th { padding: 7px 5px; text-align: left; text-transform: uppercase; }
-body.plantshare#checklists table.checklists-list tbody { display: block; height: 500px; overflow-y: scroll; }
+body.plantshare#checklists table.checklists-list tbody { display: block; }
 body.plantshare#checklists table.checklists-list tbody tr:nth-child(odd) { background-color: #e1f0d1; }
 body.plantshare#checklists table.checklists-list tbody tr td { padding: 7px 5px; }
 body.plantshare#checklists table.checklists-list tbody tr td .thumb { background: url(../images/icons/flower-thumb.gif) no-repeat; height: 40px; width: 39px; }
