--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -1162,6 +1162,8 @@ body.plantshare {
             white-space: nowrap;
             width: 20px;
             input[type="checkbox"] {
+                margin-left: 5px;
+                margin-top: 10px;
                 width: auto;
             }
         }
