--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -1210,6 +1210,7 @@ body.plantshare {
                 margin: 0;
             }
             a.row-btn {
+                border-bottom: 0;
                 float: right;
                 margin: 0 0 0 8px;
                 text-indent: -9999px;
@@ -1331,6 +1332,7 @@ body.plantshare {
                     display: inline-block;
                 }
                 a.row-btn {
+                    border-bottom: 0;
                     float: right;
                     margin: 5px 0 0 8px;
                 }
