Add left nav. 'here' marker to New Checklist page.

--- a/gobotany/plantshare/templates/_plantshare_navigation.html
+++ b/gobotany/plantshare/templates/_plantshare_navigation.html
@@ -16,10 +16,10 @@
             <li class="ask">{% nav_item 'Ask the Botanist' ps-questions %}</li>
             
             {% if user.is_authenticated %}
-                <li>{% nav_item 'Checklists' ps-checklists %}</li>
-                <li>{% nav_item 'Find People' ps-find-people %}</li>
+                <li class="checklists">{% nav_item 'Checklists' ps-checklists %}</li>
+                <li class="people">{% nav_item 'Find People' ps-find-people %}</li>
                 {% comment %}
-                <li>{% nav_item 'Your Groups' %}{# TODO: add URL name #}</li>
+                <li class="groups">{% nav_item 'Your Groups' %}{# TODO: add URL name #}</li>
                 {% endcomment %}
                 <li class="profile">{% nav_item 'Your Profile' ps-your-profile %}</li>
                 {% assign_user_display_name user=user as display_name %}
