--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -1018,7 +1018,7 @@ body.plantshare {
     }
 }
 
-&#checklists {
+&.checklists {
     .notification.box li {
         list-style-type: disc;
     }
