--- a/gobotany/plantshare/templates/new_checklist.html
+++ b/gobotany/plantshare/templates/new_checklist.html
@@ -15,7 +15,7 @@
     ]);
 {% endblock %}
 
-{% block body_attributes %}id="checklists" class="plantshare checklists"{% endblock %}
+{% block body_attributes %}id="new-checklist" class="plantshare checklists"{% endblock %}
 
 {% block main_content %}
 <h1>Create New Checklist</h1>
