Add left nav. 'here' marker to Checklist view page.

--- a/gobotany/plantshare/templates/checklist_detail.html
+++ b/gobotany/plantshare/templates/checklist_detail.html
@@ -7,7 +7,7 @@
     require(['util/suggester_init', 'plantshare/plantshare']);
 {% endblock %}
 
-{% block body_attributes %}id="checklists" class="plantshare checklists"{% endblock %}
+{% block body_attributes %}id="checklist" class="plantshare checklists"{% endblock %}
 
 {% block main_content %}
 <h1>Checklists</h1>
