Add left nav. 'here' marker to Edit Checklist page.

--- a/gobotany/plantshare/templates/edit_checklist.html
+++ b/gobotany/plantshare/templates/edit_checklist.html
@@ -15,7 +15,7 @@
     ]);
 {% endblock %}
 
-{% block body_attributes %}id="checklists" class="plantshare checklists"{% endblock %}
+{% block body_attributes %}id="edit-checklist" class="plantshare checklists"{% endblock %}
 
 {% block main_content %}
 <h1>Checklists</h1>
