--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -234,8 +234,9 @@ body {
     &.plantshare {
         &#sighting #sidebar .sightings a::before,
         &#questions #sidebar .ask a::before,
+        &#checklist #sidebar .checklists a::before,
         &#new-checklist #sidebar .checklists a::before,
-        &#checklist #sidebar .checklists a::before {
+        &#edit-checklist #sidebar .checklists a::before {
             @include highlight-sidebar-nav-item;
         }
     }
