--- a/gobotany/plantshare/templates/checklist_detail.html
+++ b/gobotany/plantshare/templates/checklist_detail.html
@@ -1,4 +1,5 @@
 {% extends "gobotany/_page_free_sidebar.html" %}
+{% load gobotany_tags %}
 {% load mapping_tags %}
 
 {% block title %}Checklists: PlantShare{% endblock %}
@@ -31,7 +32,7 @@
             {% for entry in checklist.entries.all %}
             <tr>
                 
-                <td class="name"><em>{{ entry.plant_name }}</em></td>
+                <td class="name">{{ entry.plant_name|italicize_if_scientific|safe }}</td>
                 <td class="image"><div class="thumb"></div></td>
                 <td class="date-sighted">{{ entry.date_found|date:"m/d/Y"|default:"N/A" }}</td>
                 <td class="location">{{ entry.location|default:"N/A" }}</td>
