--- a/gobotany/plantshare/templates/new_checklist.html
+++ b/gobotany/plantshare/templates/new_checklist.html
@@ -1,7 +1,7 @@
 {% extends "gobotany/_page_free_sidebar.html" %}
 {% load mapping_tags %}
 
-{% block title %}Checklists: PlantShare{% endblock %}
+{% block title %}Create New Checklist: PlantShare{% endblock %}
 
 {% block more_meta_link %}
 <link rel="stylesheet" href="/static/css/smoothness/jquery-ui-1.9.2.custom.min.css" />
