Use a link for deleting a checklist for now.
This is to be consistent with sightings, and to only allow
deleting one checklist at a time. It also allows the checkboxes
to be hidden, avoiding potential confusion given that the
feature is checklists, although we may need to revisit this
when it comes time to add the sharing feature.

--- a/gobotany/plantshare/templates/checklists.html
+++ b/gobotany/plantshare/templates/checklists.html
@@ -41,7 +41,7 @@
           <tbody>
               {% for checklist in checklists %}
               <tr>
-                  <td class="first"><input type="checkbox" name="checklist_id" value="{{checklist.pk}}"/></td>
+                  <td class="first"><input type="checkbox" name="checklist_id" value="{{ checklist.pk }}"></td>
                   <td class="checklistview-name">{{ checklist.name }}</td>
                   {% ifequal user.username checklist.owner.name %}
                   <td class="owner">Me</td>
@@ -49,6 +49,7 @@
                       <a href="{% url 'ps-checklist' checklist.pk %}">View</a>
                       <a href="{% url 'ps-checklist-edit' checklist.pk %}">Edit</a>
                       <a href="{% url 'ps-checklist-export' checklist.pk %}">Export</a>
+                      <a class="delete" href="{% url 'ps-checklist-delete' %}">Delete</a>
                   </td>
                   {% else %}
                   <td class="owner">{{ checklist.owner.name }}</td>
@@ -61,7 +62,7 @@
     </form>
     <div class="form-actions small-margin-top">
         <!-- <a class="ps-button" href="javascript:alert('Coming soon!');" rel="shadowbox;height=440;width=750;" class="share-btn inactive btn">Share</a> -->
-        <a href="{% url 'ps-checklist-delete' %}" class="ps-button delete-btn inactive btn">Delete</a>
+        <!--<a href="{% url 'ps-checklist-delete' %}" class="ps-button delete-btn inactive btn">Delete</a>-->
     </div><!-- /.form-actions -->
     {% else %}
     <p>Your checklists will appear here, {% user_first_name request.user %}.</p>
