Place the Upload link on the sightings form to the right of the images.
This allows adding multiple images by always just clicking the
Upload link at the right edge of the horizontal list of images.

--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -462,10 +462,12 @@ body.plantshare {
     }
     &#new-sighting, &#edit-sighting {
         .thumb-gallery {
-            margin-bottom: 20px;
+            display: inline-block;
+            float: left;
+            padding-top: 10px;
             .thumb-frame {
                 display: inline-block;
-                margin: 0 5px;
+                margin: 0 14px 0 0;
                 vertical-align: bottom;
 
                 .thumb {
@@ -485,8 +487,15 @@ body.plantshare {
                 }
             }
         }
+        .upload {
+            display: inline-block;
+            float: left;
+            padding-top: 6px;
+        }
         .visibility {
+            clear: left;
             margin-bottom: 60px;
+            padding-top: 20px;
             select {
                 margin: 6px 0 0;
             }
