--- a/gobotany/plantshare/templates/_sighting_form.html
+++ b/gobotany/plantshare/templates/_sighting_form.html
@@ -32,7 +32,6 @@
         </fieldset>
 
         <p>Images</p> 
-        <p><a id="upload-link" href="#" rel=".image-modal">+ Upload Image</a></p>
         <div id="sighting-photos">
             <input type="hidden" name="__template__sightings_photos" class="template-photo"></input>
         </div>
@@ -52,6 +51,9 @@
                 {% endfor %}
             {% endif %}
         </div>
+        <p class="upload">
+            <a id="upload-link" href="#" rel=".image-modal">+ Upload Image</a>
+        </p>
 
         <div class="visibility">
             <p>Visibility</p>
